# graph-search

./: README.md  app.py  llm_config.yaml  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py  logger.py  utils.py
src/nodes/: __init__.py  format_graph.py  graph_renderer.py  graph_selector.py  query_filtering.py  simple_chat.py  text_response.py  web_search.py  web_search_context.py
src/prompts/: graph-classification-instructions.txt  graph-selection-instructions.txt  web-search-instructions.txt
src/workflows/: conditional_graph_workflow.py  simple_chat_workflow.py  web_search_workflow.py
tests/: conftest.py  test_workflows.py
